--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ SQLAlchemy==2.0.25
 psycopg2-binary==2.9.9
 
 # OpenAI & AI/ML
-openai==1.12.0
+openai>=1.30.0
 chromadb==0.4.24
 sentence-transformers==2.2.2
 numpy==1.26.4
