🚀 Performance & UX improvements for live deployment
✅ Fixed clickable course links:
- Convert markdown links to Bootstrap buttons
- Links now work: 📖 Kurs anzeigen, 📥 Download, 📚 Alle Kurse
- Better visual design with Bootstrap styling

✅ Performance optimizations:
- Updated sentence-transformers to 2.7.0
- Added huggingface-hub>=0.20.0 to fix dependency issues
- Faster knowledge lookup fallbacks
- Performance-optimized supervisor instructions

✅ Response time monitoring:
- Added performance timer to chat interface
- Shows response time (e.g., '⚡ 2.3s')
- Real-time status updates during processing
- Better user feedback on system performance

✅ Smart response handling:
- Simple questions: FAST answers without tools (<3s)
- Course creation: Full workflow with tools
- Clear performance rules for supervisor

🎯 Expected improvements:
- Clickable course links work immediately
- Faster responses for simple questions
- Visible performance metrics for users
- Better overall user experience

Ready for production use! 🚀

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,8 @@ psycopg2-binary==2.9.9
 # OpenAI & AI/ML
 openai>=1.30.0
 chromadb==0.4.24
-sentence-transformers==2.2.2
+sentence-transformers==2.7.0
+huggingface-hub>=0.20.0
 numpy==1.26.4
 
 # Utilities
